cmake_minimum_required(VERSION 3.15)
project(NetWeave)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)

include_directories(${CMAKE_SOURCE_DIR}/src/libs)
include_directories(${CMAKE_SOURCE_DIR}/src/utils)
add_executable(Server ./src/server.cpp)
add_executable(Client ./src/client.cpp)
add_executable(Test ./tests/main.cpp)